[package]
name = "radishmq"
description = "MQTT broker"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Fload <fload2000@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=0.2.22", features = ["full"]}
tokio-util = { version = "0.3.1", features = ["full"]}
log = "0.4"
thiserror = "1"
argh = "0.1.3"
confy = "0.4.0"
pretty_env_logger = "0.4"
bytes = "0.5.6"