[package]
name = "radishmq"
description = "MQTT broker"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Florian Straubinger <github@flo-str.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=0.2.22", features = ["full"]}
tokio-util = { version = "0.7.7", features = ["full"]}
log = "0.4"
thiserror = "1"
argh = "0.1.3"
confy = "0.5.1"
pretty_env_logger = "0.4"
bytes = "1.4.0"
argparse = "0.2.2"