[package]
name = "radish_mq"
version = "0.1.0"
description = "Fast and lightweight message broker written in Rust."
authors = ["Florian Straubinger <github@f-str.de>"]
license-file = "LICENSE"
edition = "2021"

[dependencies]
tokio = { version = "1.33.0", features = ["full"]}
tokio-util = { version = "0.7.9", features = ["full"]}
log = "0.4.20"
pretty_env_logger = "0.5.0"
bytes = "1.5.0"
actix-web = "4.4.0"
refinery = { version = "0.8.11", features = ["tokio-postgres"]}
tokio-postgres = "0.7.10"
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid" ] }
serde = { version = "1.0.189", features = ["derive"] }
lazy_static = "1.4.0"
uuid = { version = "1.5.0", features = ["v4"] }
futures = "0.3.28"