[package]
name = "radish_mq"
version = "0.1.0"
description = "Fast and lightweight message broker written in Rust."
authors = ["Florian Straubinger <github@f-str.de>"]
license-file = "LICENSE"
edition = "2021"

[dependencies]
tokio = { version = "1.43.1", features = ["full"]}
tokio-util = { version = "0.7.12", features = ["full"]}
log = "0.4.22"
pretty_env_logger = "0.5.0"
bytes = "1.11.1"
actix-web = "4.9.0"
refinery = { version = "0.8.14", features = ["tokio-postgres"]}
tokio-postgres = "0.7.12"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid" ] }
serde = { version = "1.0.210", features = ["derive"] }
lazy_static = "1.5.0"
uuid = { version = "1.10.0", features = ["v4"] }
futures = "0.3.30"
